welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:6: error: type mismatch;
 found   : Unit
 required: Boolean
	for (nbPas <-0 to 6) {
                   ^